[gd_scene load_steps=4 format=3 uid="uid://bffgl1iws8g42"]

[ext_resource type="Script" path="res://src/prefabs/EditorVoiceButton.gd" id="1_nll2m"]
[ext_resource type="Texture2D" uid="uid://dbsmygu8s8chd" path="res://assets/ui/arrow_left.png" id="2_c4b7o"]
[ext_resource type="Texture2D" uid="uid://dsh4wbj03u0uq" path="res://assets/ui/play_button.png" id="3_bcy7n"]

[node name="EditorVoiceAsset" type="Control"]
custom_minimum_size = Vector2(512, 48)
layout_mode = 3
anchors_preset = 0
offset_right = 216.0
offset_bottom = 48.0
mouse_filter = 2
script = ExtResource("1_nll2m")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Right-Click to Remove"

[node name="UpButton" type="TextureButton" parent="."]
modulate = Color(1, 1, 1, 0.3)
layout_mode = 0
offset_left = 3.99999
offset_top = -24.0
offset_right = 28.0
rotation = 1.5708
pivot_offset = Vector2(0, 24)
texture_normal = ExtResource("2_c4b7o")
ignore_texture_size = true
stretch_mode = 0

[node name="DownButton" type="TextureButton" parent="."]
modulate = Color(1, 1, 1, 0.3)
layout_mode = 0
offset_left = 3.99999
offset_right = 28.0
offset_bottom = 24.0
rotation = 1.5708
pivot_offset = Vector2(0, 24)
texture_normal = ExtResource("2_c4b7o")
ignore_texture_size = true
stretch_mode = 0
flip_h = true

[node name="PlayButton" type="TextureButton" parent="."]
modulate = Color(1, 1, 1, 0.3)
layout_mode = 0
offset_left = 472.0
offset_top = 8.0
offset_right = 504.0
offset_bottom = 40.0
texture_normal = ExtResource("3_bcy7n")

[node name="FileName" type="Label" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 8.0
offset_right = 472.0
offset_bottom = 40.0
text = "Audio.ogg"
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 3

[node name="Sound" type="AudioStreamPlayer" parent="."]

[connection signal="gui_input" from="Panel" to="." method="_on_panel_gui_input"]
[connection signal="button_up" from="UpButton" to="." method="_on_up_button_up"]
[connection signal="mouse_entered" from="UpButton" to="." method="_on_up_button_mouse_entered"]
[connection signal="mouse_exited" from="UpButton" to="." method="_on_up_button_mouse_exited"]
[connection signal="button_up" from="DownButton" to="." method="_on_down_button_up"]
[connection signal="mouse_entered" from="DownButton" to="." method="_on_down_button_mouse_entered"]
[connection signal="mouse_exited" from="DownButton" to="." method="_on_down_button_mouse_exited"]
[connection signal="button_up" from="PlayButton" to="." method="_on_play_button_up"]
[connection signal="mouse_entered" from="PlayButton" to="." method="_on_play_button_mouse_entered"]
[connection signal="mouse_exited" from="PlayButton" to="." method="_on_play_button_mouse_exited"]
